--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <main>
   <h1>Form</h1>
 
-  <app-yes-no-button-group
-    [(value)]="yesNoAnswer"
-    label="Are you enough in Angular?"
-  ></app-yes-no-button-group>
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <app-yes-no-button-group
+      formControlName="yesNoAnswer"
+      label="Are you enough in Angular?"
+    ></app-yes-no-button-group>
 
-  <span>yesNoAnswer value: {{ yesNoAnswer }}</span>
+    <button>Submit</button>
+  </form>
 </main>
