--- a/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
+++ b/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
@@ -1,7 +1,9 @@
-<div class="button-group">
-  <label class="label">{{ label }}</label>
+<div role="radiogroup" [attr.aria-labelledby]="id" class="button-group">
+  <label [attr.id]="id" class="label">{{ label }}</label>
 
   <button
+    role="radio"
+    [attr.aria-checked]="value === options.YES"
     class="button button-yes"
     type="button"
     (click)="activate(options.YES)"
@@ -11,6 +13,8 @@
   </button>
 
   <button
+    role="radio"
+    [attr.aria-checked]="value === options.NO"
     class="button button-no"
     type="button"
     (click)="activate(options.NO)"
