--- a/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.scss
+++ b/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.scss
@@ -27,3 +27,31 @@ $button-pressed-background: #0fc7ff;
     }
   }
 }
+
+// STYLES REFERENTES AO HTML PADRÃO
+
+.button-group {
+  .radio {
+    position: relative;
+    display: inline-block;
+
+    input {
+      opacity: 0;
+      position: absolute;
+      top: 25%;
+      left: 25%;
+
+      &:focus + label {
+        outline: solid 1px #272c3f;
+      }
+
+      &:checked + label {
+        @extend .button-pressed;
+      }
+    }
+
+    label {
+      display: block;
+    }
+  }
+}
