Iniciando o quinto curso da formação em angular da alura e com isso terminando a parte 01 do mesmo

--- a/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
+++ b/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
@@ -53,7 +53,9 @@
       (changes)="activate(options.YES)"
     />
 
-    <label class="button button-yes" [attr.for]="id + '-yes'">Yes</label>
+    <label class="button button-yes radio-left" [attr.for]="id + '-yes'"
+      >Yes</label
+    >
   </div>
 
   <div class="radio">
