--- a/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.scss
+++ b/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.scss
@@ -52,6 +52,16 @@ $button-pressed-background: #0fc7ff;
 
     label {
       display: block;
+
+      &.radio-left {
+        margin-left: 9px;
+      }
     }
   }
+}
+
+// GERAL
+
+.button-group {
+  text-align: left;
 }
