--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,11 @@ body {
     color: #fff;
   }
 
+  &.button-disabled {
+    background-color: #8e9ba7;
+    color: #fff;
+  }
+
   &.button-secondary {
     background-color: #6c757d;
     color: #fff;
